Added photos route
